--- a/Hotella/appsettings.example.json
+++ b/Hotella/appsettings.example.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=YOUR_SERVER;Database=HotelDb;User Id=YOUR_USER;Password=YOUR_PASSWORD;"
+        "DefaultConnection": "Server=DESKTOP-4GGVJ1C\\SQLEXPRESS;Database=Hotella;User Id=sa;Password=08065588550;TrustServerCertificate=True;"
 
     }
 }
